--- a/gs-studio/package.json
+++ b/gs-studio/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "node-sass": "4",
+    "sass": ">=7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-multi-carousel": "^2.6.2",
@@ -39,8 +39,7 @@
       "last 1 safari version"
     ]
   },
-    "engines": {
-      "node": ">=18"
-    }
-  
+  "devDependencies": {
+    "sass": "^1.66.1"
+  }
 }
